[project]
name = "generate-sequence-number-to-file"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "poethepoet>=0.38.0",
    "pre-commit>=4.5.0",
    "ruff>=0.14.8",
    "ty>=0.0.1a32",
]
